--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
 
 }
 
+h1 {
+    font-size: 2rem;
+    font-weight:800;
+}
+
 .book {
     background-color: orange;
     border: 2px darkgoldenrod solid;
