--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-image: url(../../homepage/images/B38D9581-D993-4EC1-A6E1-195FD6294B7D.jpeg);
+	background-image: url(../images/B38D9581-D993-4EC1-A6E1-195FD6294B7D.jpeg);
 	background-repeat: none;
 	background-size: cover;
 	background-position: center;
@@ -31,6 +31,7 @@ header nav ul {
 	font-weight: 700;
 	letter-spacing: -0.24px;
 	margin: 0;
+	margin-bottom: 50px;
 	outline: none;
 	padding: 10px 20px;
 	display: flex;
