--- a/assets/css/home_style.css
+++ b/assets/css/home_style.css
@@ -11,6 +11,7 @@ body {
 	background-repeat: none;
 	background-size: cover;
 	background-position: center;
+	background-color: #5d49104a;
 }
 
 /* Header Content */
